Fri Sep 29 16:31:47 1995  Theodore Y. Ts'o  <tytso@dcl>

	* osconfig.c: Remove krb5_lname_file; it's not used any more.

Mon Sep 25 16:58:17 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Fri Sep 22 15:57:33 1995  Mark Eichin  <eichin@cygnus.com>

	* write_msg.c (krb5_write_message): check the real length
	variable, not the net version.

Wed Sep 20 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* macsock.c:  Added TCP streams to the emulation package.  gethostname
		now no longer returns true cannonical hostnames.

Wed Sep 13 11:01:18 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: had to define away DBFLAGS for the PC.

Mon Sep 11 17:46:18 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* genaddrs.c (krb5_auth_con_genaddrs): Replace function
		declaration back to int instead of SOCKET due to prototype
		mismatching. 

Sun Sep 10 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* ustime.c: use the version of getTimeZoneOffset in :os:crypto: for
		_MACINTOSH.

Wed Sep  6 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* localaddr.c changed name to oslocaladdr.c for metrowerks project
		file management.

	* ustime.c:  changed mac version of krb5_crypto_us_timeofday to compile
		with contemporary header files for metrowerks

	* macsock.c:  added tcp stream support to suppliment the udp.  Added
		getsockname.  Fixed gethostname to stop appending '.' to the
		end of a connonical hostname.

	* net_write.c:  need to cast file descriptors to SOCKETs

	* net_read.c:  need to cast file descriptors to SOCKETs

	* krbfileio.c:  mac doesn't support fsync, define the usage out

	* init_os_cxt.c:  move the default location of the krb conf file to
		the preferences folder.  Added some routines to take a 
		mac FSSpec and turn it into a mac pathname string.

	* hst_realm.c:  assign a NULL to retrealms to clean up a warning.

	* genaddrs.c:  support getsockname from macsock
